--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Johan 't Hart",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "typescript": "^2.6.1"
+  },
+  "peerDependencies": {
+    "rxjs": "*",
+    "@angular/testing": "*",
+    "@angular/core": "*"
+  }
 }
